tests/NormalTests/paczka1/small_fuzzy/75715513.err
Error in line 1: hAa9 S914 46,1
Error in line 5: hAa9 S666 48,2
